Main article contain is overflowing tot he sidebar at the left when screen dimension is 1440, removed the wdith attribute to test if it will solve.

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -175,7 +175,7 @@ h1, h2, h3, h4, h5 {
 .theme-doc-markdown,
 .markdown {
   margin-right: 0; // Remove margin
-  width: 100%;     // Set width to auto to allow it to expand
+  // width: 100%;     // Set width to auto to allow it to expand
   margin-left: 0;
   margin-right: 0;
   padding-top: 10px;
